<resources>
    <!--    default constants-->
    <string name="description_default">Sunny</string>
    <string name="date_default">01.01.2000</string>
    <string name="city_default_view">City, NN</string>
    <string name="default_temperature">00°</string>
    <string name="default_main_temperature">25°</string>
    <string name="default_city">Минск</string>
    <string name="added_cities">Добавленные города</string>
    <string name="uvi_title">УФ-индекс</string>
    <string name="sunset_title">Закат</string>
    <string name="sunrise_title">Рассвет</string>
    <string name="humidity_title">Влажность</string>
    <string name="feels_like_title">Ощущается как</string>
    <string name="no_value">- -</string>
    <string name="main_log">MAIN_LOG</string>
    <string name="network_unavailable">Network unavailable now!</string>
    <string name="incorrect_input">Incorrect input!</string>
    <string name="location_title">Your Location</string>

    <!--    image descriptions-->
    <string name="forecast_default_image">forecast_default_image</string>

    <!--    dialog titles-->
    <string name="add_city_dialog_title">Please put the city name</string>
    <string name="delete_city_title">Do you want to delete city: </string>

    <!--        dialog buttons-->
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>

    <!--    app constants-->
    <string name="app_name">Forecast_Sobolev</string>
    <string name="offline_mode">Offline mode</string>

    <!--    other-->
    <string name="get_city_extra">CHOSEN_CITY</string>
    <string name="city_name">City name</string>
    <string name="chosen_pref_key">CHOSEN_CITY</string>

    <string name="menu_button_description">Menu</string>
    <string name="location_description">Location</string>
    <string name="today_description">Today Description View</string>
    <string name="uvindex">uvindex</string>
    <string name="time_default">12:00</string>
    <string name="location_image">location_image</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Единица измерения</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="key_temperature_unit">key_temperature_unit</string>
    <string name="key_auto_update">key_auto_update</string>
    <string name="floating_app_bar_title">Настройки погоды</string>
    <string name="scroll_behavior">GFG | CollapseToolbar</string>
    <string name="app_bar_back">App bar back</string>
</resources>