<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    tools:background="@drawable/blackout"
    android:orientation="horizontal"
    app:cardElevation="8dp">

    <TextView
        android:id="@+id/daily_date"
        style="@style/TextView.Small"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:gravity="center|start"
        android:text="@string/date_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/daily_image"
        style="@style/AppImageView.MiddleSize"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/forecast_default_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_date"
        app:srcCompat="@drawable/forecast_clouds_icon" />

    <TextView
        android:id="@+id/daily_description"
        style="@style/TextView.Small"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:gravity="center|start"
        android:paddingLeft="20dp"
        android:text="@string/description_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_temp" />

    <TextView
        android:id="@+id/daily_temp"
        style="@style/TextView.MainWhite.Titles"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:gravity="center|end"
        android:text="@string/default_main_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_image" />

</LinearLayout>