<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_button"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginStart="11dp"
    android:layout_marginLeft="11dp"
    android:layout_marginEnd="11dp"
    android:layout_marginRight="11dp"
    android:layout_marginBottom="11dp"
    android:layout_weight="1"
    android:background="#72151515"
    android:orientation="vertical"
    android:padding="11dp">


    <TextView
        android:id="@+id/currentCity"
        style="@style/Widget.Forecast.TextView.Default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center_horizontal"
        android:text="@string/no_value"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/currentDate"
        style="@style/Widget.Forecast.TextView.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentCity"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/date_default" />

    <ImageView
        android:id="@+id/big_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDate"
        app:srcCompat="@drawable/forecast_clouds_icon"
        tools:ignore="ImageContrastCheck"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/today_description" />

    <TextView
        android:id="@+id/temperature_today"
        style="@style/Widget.Forecast.TextView.Default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_image"
        app:lineHeight="32dp"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/default_temperature"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/feels_like_view"
        style="@style/Widget.Forecast.TextView.Small"
        tools:ignore="TextContrastCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_value" />

</LinearLayout>