<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="11dp"
    android:layout_weight="1"
    android:background="#72151515"
    android:orientation="vertical"
    android:padding="11dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            app:srcCompat="@drawable/forecast_uvindex_icon"
            tools:ignore="ImageContrastCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="uvindex" />

        <TextView
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:gravity="start|left"
            android:text="@string/uvi_title" />

        <TextView
            android:id="@+id/uvindex_value"
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/no_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            app:srcCompat="@drawable/forecast_sunset_icon"
            tools:ignore="ImageContrastCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="dusk" />

        <TextView
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:gravity="start|left"
            android:text="@string/sunset_title" />

        <TextView
            android:id="@+id/sunset_value"
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/no_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            app:srcCompat="@drawable/forecast_sunrise_icon"
            tools:ignore="ImageContrastCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="uvindex" />

        <TextView
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:gravity="start|left"
            android:text="@string/sunrise_title" />

        <TextView
            android:id="@+id/sunrise_value"
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/no_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            app:srcCompat="@drawable/forecast_humidity_icon"
            tools:ignore="ImageContrastCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="humidity" />

        <TextView
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:gravity="start|left"
            android:text="@string/humidity_title" />

        <TextView
            android:id="@+id/humidity_value"
            style="@style/Widget.Forecast.TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/no_value" />
    </LinearLayout>
</LinearLayout>